DiscountValues entegrasyonu yapıldı